<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_catalogs" />

    <Button
        android:id="@+id/see_messier_button"
        android:text="@string/messier"
        style="@style/CatalogButton"/>

    <Button
        android:id="@+id/see_open_cluster_button"
        android:text="@string/open_cluster"
        style="@style/CatalogButton"/>

    <Button
        android:id="@+id/see_globular_cluster_button"
        android:text="@string/globular_cluster"
        style="@style/CatalogButton"/>

    <Button
        android:id="@+id/see_galaxy_button"
        android:text="@string/galaxies"
        style="@style/CatalogButton"/>

    <Button
        android:id="@+id/see_nebula_button"
        android:text="@string/nebulae"
        style="@style/CatalogButton"/>

</LinearLayout>
